# gpx2fit

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
fit/: fit.c  fit.h  fit_config.h  fit_convert.c  fit_convert.h  fit_crc.c  fit_crc.h  fit_example.c  fit_example.h  fit_include.h  fit_product.c  fit_product.h  fit_ram.c  fit_ram.h  main.c
fit/examples/encode/: encode.c
gpxp/: Readme.md  gpxp.c  gpxp.h
gpxs/: garmin.gpx
src/: main.c
